// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`monorepo generate-package-list / generate-modules-provider { app: 'ejected', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new host.exp.exponent.experience.splashscreen.legacy.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list / generate-modules-provider { app: 'ejected', platform: 'apple' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore


@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }

  public override func getReactDelegateHandlers() -> [ExpoReactDelegateHandlerTupleType] {
    return [
    ]
  }

  public override func getAppCodeSignEntitlements() -> AppCodeSignEntitlements {
    return AppCodeSignEntitlements.from(json: #"{}"#)
  }
}
"
`;

exports[`monorepo generate-package-list / generate-modules-provider { app: 'managed', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new host.exp.exponent.experience.splashscreen.legacy.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list / generate-modules-provider { app: 'managed', platform: 'apple' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore


@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }

  public override func getReactDelegateHandlers() -> [ExpoReactDelegateHandlerTupleType] {
    return [
    ]
  }

  public override func getAppCodeSignEntitlements() -> AppCodeSignEntitlements {
    return AppCodeSignEntitlements.from(json: #"{}"#)
  }
}
"
`;

exports[`monorepo generate-package-list / generate-modules-provider { app: 'with-sentry', platform: 'android' } 1`] = `
"package com.test;

import java.util.Arrays;
import java.util.List;
import expo.modules.core.interfaces.Package;
import expo.modules.kotlin.modules.Module;
import expo.modules.kotlin.ModulesProvider;

public class ExpoModulesPackageList implements ModulesProvider {
  private static class LazyHolder {
    static final List<Package> packagesList = Arrays.<Package>asList(
      new expo.modules.application.ApplicationPackage(),
      new expo.modules.constants.ConstantsPackage(),
      new expo.modules.device.DevicePackage(),
      new expo.modules.errorrecovery.ErrorRecoveryPackage(),
      new expo.modules.filesystem.FileSystemPackage(),
      new expo.modules.font.FontLoaderPackage(),
      new expo.modules.imageloader.ImageLoaderPackage(),
      new expo.modules.keepawake.KeepAwakePackage(),
      new expo.modules.permissions.PermissionsPackage(),
      new host.exp.exponent.experience.splashscreen.legacy.SplashScreenPackage(),
      new expo.modules.updates.UpdatesPackage(),
      new org.unimodules.core.BasePackage()
    );

    static final List<Class<? extends Module>> modulesList = Arrays.<Class<? extends Module>>asList(
      
    );
  }

  public static List<Package> getPackageList() {
    return LazyHolder.packagesList;
  }

  @Override
  public List<Class<? extends Module>> getModulesList() {
    return LazyHolder.modulesList;
  }
}
"
`;

exports[`monorepo generate-package-list / generate-modules-provider { app: 'with-sentry', platform: 'apple' } 1`] = `
"/**
 * Automatically generated by expo-modules-autolinking.
 *
 * This autogenerated class provides a list of classes of native Expo modules,
 * but only these that are written in Swift and use the new API for creating Expo modules.
 */

import ExpoModulesCore


@objc(file)
public class file: ModulesProvider {
  public override func getModuleClasses() -> [AnyModule.Type] {
    return [
    ]
  }

  public override func getAppDelegateSubscribers() -> [ExpoAppDelegateSubscriber.Type] {
    return [
    ]
  }

  public override func getReactDelegateHandlers() -> [ExpoReactDelegateHandlerTupleType] {
    return [
    ]
  }

  public override func getAppCodeSignEntitlements() -> AppCodeSignEntitlements {
    return AppCodeSignEntitlements.from(json: #"{}"#)
  }
}
"
`;

exports[`monorepo resolve { app: 'ejected', platform: 'android' } 1`] = `
[
  {
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-core",
        "sourceDir": "monorepo/node_modules/@unimodules/core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-application",
        "sourceDir": "monorepo/node_modules/expo-application/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-constants",
        "sourceDir": "monorepo/node_modules/expo-constants/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-error-recovery",
        "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-file-system",
        "sourceDir": "monorepo/node_modules/expo-file-system/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-font",
        "sourceDir": "monorepo/node_modules/expo-font/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-image-loader",
        "sourceDir": "monorepo/node_modules/expo-image-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-keep-awake",
        "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-modules-core",
        "sourceDir": "monorepo/node_modules/expo-modules-core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-permissions",
        "sourceDir": "monorepo/node_modules/expo-permissions/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-splash-screen",
        "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-structured-headers",
        "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates",
        "sourceDir": "monorepo/node_modules/expo-updates/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates-interface",
        "sourceDir": "monorepo/node_modules/expo-updates-interface/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-app-loader",
        "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-task-manager-interface",
        "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
      },
    ],
  },
]
`;

exports[`monorepo resolve { app: 'ejected', platform: 'apple' } 1`] = `
[
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": [
      {
        "podName": "UMCore",
        "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "pods": [
      {
        "podName": "UMReactNativeAdapter",
        "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMReactNativeAdapter",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": [
      {
        "podName": "EXApplication",
        "podspecDir": "monorepo/node_modules/expo-application/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXApplication",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": [
      {
        "podName": "EXConstants",
        "podspecDir": "monorepo/node_modules/expo-constants/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXConstants",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXErrorRecovery",
        "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXErrorRecovery",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": [
      {
        "podName": "EXFileSystem",
        "podspecDir": "monorepo/node_modules/expo-file-system/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFileSystem",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": [
      {
        "podName": "EXFont",
        "podspecDir": "monorepo/node_modules/expo-font/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFont",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXImageLoader",
        "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXImageLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": [
      {
        "podName": "EXKeepAwake",
        "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXKeepAwake",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": [
      {
        "podName": "ExpoModulesCore",
        "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "ExpoModulesCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": [
      {
        "podName": "EXPermissions",
        "podspecDir": "monorepo/node_modules/expo-permissions/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXPermissions",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": [
      {
        "podName": "EXSplashScreen",
        "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXSplashScreen",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": [
      {
        "podName": "EXStructuredHeaders",
        "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXStructuredHeaders",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "pods": [
      {
        "podName": "EXUpdates",
        "podspecDir": "monorepo/node_modules/expo-updates/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdates",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "pods": [
      {
        "podName": "EXUpdatesInterface",
        "podspecDir": "monorepo/node_modules/expo-updates-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdatesInterface",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "UMAppLoader",
        "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMAppLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": [
      {
        "podName": "UMTaskManagerInterface",
        "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMTaskManagerInterface",
    ],
  },
]
`;

exports[`monorepo resolve { app: 'managed', platform: 'android' } 1`] = `
[
  {
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-core",
        "sourceDir": "monorepo/node_modules/@unimodules/core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-application",
        "sourceDir": "monorepo/node_modules/expo-application/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-constants",
        "sourceDir": "monorepo/node_modules/expo-constants/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-error-recovery",
        "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-file-system",
        "sourceDir": "monorepo/node_modules/expo-file-system/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-font",
        "sourceDir": "monorepo/node_modules/expo-font/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-image-loader",
        "sourceDir": "monorepo/node_modules/expo-image-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-keep-awake",
        "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-modules-core",
        "sourceDir": "monorepo/node_modules/expo-modules-core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-permissions",
        "sourceDir": "monorepo/node_modules/expo-permissions/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-splash-screen",
        "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-structured-headers",
        "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates",
        "sourceDir": "monorepo/node_modules/expo-updates/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates-interface",
        "sourceDir": "monorepo/node_modules/expo-updates-interface/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-app-loader",
        "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-task-manager-interface",
        "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
      },
    ],
  },
]
`;

exports[`monorepo resolve { app: 'managed', platform: 'apple' } 1`] = `
[
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": [
      {
        "podName": "UMCore",
        "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "pods": [
      {
        "podName": "UMReactNativeAdapter",
        "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMReactNativeAdapter",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": [
      {
        "podName": "EXApplication",
        "podspecDir": "monorepo/node_modules/expo-application/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXApplication",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": [
      {
        "podName": "EXConstants",
        "podspecDir": "monorepo/node_modules/expo-constants/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXConstants",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXErrorRecovery",
        "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXErrorRecovery",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": [
      {
        "podName": "EXFileSystem",
        "podspecDir": "monorepo/node_modules/expo-file-system/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFileSystem",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": [
      {
        "podName": "EXFont",
        "podspecDir": "monorepo/node_modules/expo-font/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFont",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXImageLoader",
        "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXImageLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": [
      {
        "podName": "EXKeepAwake",
        "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXKeepAwake",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": [
      {
        "podName": "ExpoModulesCore",
        "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "ExpoModulesCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": [
      {
        "podName": "EXPermissions",
        "podspecDir": "monorepo/node_modules/expo-permissions/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXPermissions",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": [
      {
        "podName": "EXSplashScreen",
        "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXSplashScreen",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": [
      {
        "podName": "EXStructuredHeaders",
        "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXStructuredHeaders",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.0",
    "pods": [
      {
        "podName": "EXUpdates",
        "podspecDir": "monorepo/node_modules/expo-updates/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdates",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.1",
    "pods": [
      {
        "podName": "EXUpdatesInterface",
        "podspecDir": "monorepo/node_modules/expo-updates-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdatesInterface",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "UMAppLoader",
        "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMAppLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": [
      {
        "podName": "UMTaskManagerInterface",
        "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMTaskManagerInterface",
    ],
  },
]
`;

exports[`monorepo resolve { app: 'with-sentry', platform: 'android' } 1`] = `
[
  {
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-core",
        "sourceDir": "monorepo/node_modules/@unimodules/core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-application",
        "sourceDir": "monorepo/node_modules/expo-application/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-constants",
        "sourceDir": "monorepo/node_modules/expo-constants/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-device",
    "packageVersion": "3.3.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-device",
        "sourceDir": "monorepo/node_modules/expo-device/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-error-recovery",
        "sourceDir": "monorepo/node_modules/expo-error-recovery/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-file-system",
        "sourceDir": "monorepo/node_modules/expo-file-system/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-font",
        "sourceDir": "monorepo/node_modules/expo-font/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-image-loader",
        "sourceDir": "monorepo/node_modules/expo-image-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-keep-awake",
        "sourceDir": "monorepo/node_modules/expo-keep-awake/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-modules-core",
        "sourceDir": "monorepo/node_modules/expo-modules-core/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-permissions",
        "sourceDir": "monorepo/node_modules/expo-permissions/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-splash-screen",
        "sourceDir": "monorepo/node_modules/expo-splash-screen/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-structured-headers",
        "sourceDir": "monorepo/node_modules/expo-structured-headers/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.2",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates",
        "sourceDir": "monorepo/apps/with-sentry/node_modules/expo-updates/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.2",
    "pods": undefined,
    "projects": [
      {
        "name": "expo-updates-interface",
        "sourceDir": "monorepo/apps/with-sentry/node_modules/expo-updates-interface/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-app-loader",
        "sourceDir": "monorepo/node_modules/unimodules-app-loader/android",
      },
    ],
  },
  {
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": undefined,
    "projects": [
      {
        "name": "unimodules-task-manager-interface",
        "sourceDir": "monorepo/node_modules/unimodules-task-manager-interface/android",
      },
    ],
  },
]
`;

exports[`monorepo resolve { app: 'with-sentry', platform: 'apple' } 1`] = `
[
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/core",
    "packageVersion": "7.1.1",
    "pods": [
      {
        "podName": "UMCore",
        "podspecDir": "monorepo/node_modules/@unimodules/core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "@unimodules/react-native-adapter",
    "packageVersion": "6.3.1",
    "pods": [
      {
        "podName": "UMReactNativeAdapter",
        "podspecDir": "monorepo/node_modules/@unimodules/react-native-adapter/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMReactNativeAdapter",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-application",
    "packageVersion": "3.2.0",
    "pods": [
      {
        "podName": "EXApplication",
        "podspecDir": "monorepo/node_modules/expo-application/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXApplication",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-constants",
    "packageVersion": "11.0.1",
    "pods": [
      {
        "podName": "EXConstants",
        "podspecDir": "monorepo/node_modules/expo-constants/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXConstants",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-device",
    "packageVersion": "3.3.0",
    "pods": [
      {
        "podName": "EXDevice",
        "podspecDir": "monorepo/node_modules/expo-device/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXDevice",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-error-recovery",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXErrorRecovery",
        "podspecDir": "monorepo/node_modules/expo-error-recovery/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXErrorRecovery",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-file-system",
    "packageVersion": "11.1.3",
    "pods": [
      {
        "podName": "EXFileSystem",
        "podspecDir": "monorepo/node_modules/expo-file-system/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFileSystem",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-font",
    "packageVersion": "9.2.1",
    "pods": [
      {
        "podName": "EXFont",
        "podspecDir": "monorepo/node_modules/expo-font/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXFont",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-image-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "EXImageLoader",
        "podspecDir": "monorepo/node_modules/expo-image-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXImageLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-keep-awake",
    "packageVersion": "9.2.0",
    "pods": [
      {
        "podName": "EXKeepAwake",
        "podspecDir": "monorepo/node_modules/expo-keep-awake/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXKeepAwake",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-modules-core",
    "packageVersion": "0.2.0",
    "pods": [
      {
        "podName": "ExpoModulesCore",
        "podspecDir": "monorepo/node_modules/expo-modules-core/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "ExpoModulesCore",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-permissions",
    "packageVersion": "12.1.1",
    "pods": [
      {
        "podName": "EXPermissions",
        "podspecDir": "monorepo/node_modules/expo-permissions/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXPermissions",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-splash-screen",
    "packageVersion": "0.11.2",
    "pods": [
      {
        "podName": "EXSplashScreen",
        "podspecDir": "monorepo/node_modules/expo-splash-screen/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXSplashScreen",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-structured-headers",
    "packageVersion": "1.1.1",
    "pods": [
      {
        "podName": "EXStructuredHeaders",
        "podspecDir": "monorepo/node_modules/expo-structured-headers/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXStructuredHeaders",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates",
    "packageVersion": "0.8.2",
    "pods": [
      {
        "podName": "EXUpdates",
        "podspecDir": "monorepo/apps/with-sentry/node_modules/expo-updates/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdates",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "expo-updates-interface",
    "packageVersion": "0.2.2",
    "pods": [
      {
        "podName": "EXUpdatesInterface",
        "podspecDir": "monorepo/apps/with-sentry/node_modules/expo-updates-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "EXUpdatesInterface",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-app-loader",
    "packageVersion": "2.2.0",
    "pods": [
      {
        "podName": "UMAppLoader",
        "podspecDir": "monorepo/node_modules/unimodules-app-loader/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMAppLoader",
    ],
  },
  {
    "appDelegateSubscribers": [],
    "debugOnly": false,
    "modules": [],
    "packageName": "unimodules-task-manager-interface",
    "packageVersion": "6.2.0",
    "pods": [
      {
        "podName": "UMTaskManagerInterface",
        "podspecDir": "monorepo/node_modules/unimodules-task-manager-interface/ios",
      },
    ],
    "projects": undefined,
    "reactDelegateHandlers": [],
    "swiftModuleNames": [
      "UMTaskManagerInterface",
    ],
  },
]
`;

exports[`monorepo search ejected 1`] = `
{
  "@unimodules/core": {
    "config": {
      "name": "unimodules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": {
    "config": {
      "android": {
        "packages": [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": {
    "config": {
      "name": "expo-application",
      "platforms": [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": {
    "config": {
      "name": "expo-constants",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-error-recovery": {
    "config": {
      "name": "expo-error-recovery",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": {
    "config": {
      "name": "expo-file-system",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": {
    "config": {
      "name": "expo-font",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": {
    "config": {
      "name": "expo-image-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": {
    "config": {
      "name": "expo-keep-awake",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": {
    "config": {
      "name": "expo-modules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": {
    "config": {
      "name": "expo-permissions",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": {
    "config": {
      "name": "expo-splash-screen",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": {
    "config": {
      "name": "expo-structured-headers",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": {
    "config": {
      "name": "expo-updates",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-updates",
    "version": "0.8.0",
  },
  "expo-updates-interface": {
    "config": {
      "name": "expo-updates-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-updates-interface",
    "version": "0.2.1",
  },
  "unimodules-app-loader": {
    "config": {
      "name": "unimodules-app-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": {
    "config": {
      "name": "unimodules-task-manager-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo search managed 1`] = `
{
  "@unimodules/core": {
    "config": {
      "name": "unimodules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": {
    "config": {
      "android": {
        "packages": [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": {
    "config": {
      "name": "expo-application",
      "platforms": [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": {
    "config": {
      "name": "expo-constants",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-error-recovery": {
    "config": {
      "name": "expo-error-recovery",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": {
    "config": {
      "name": "expo-file-system",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": {
    "config": {
      "name": "expo-font",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": {
    "config": {
      "name": "expo-image-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": {
    "config": {
      "name": "expo-keep-awake",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": {
    "config": {
      "name": "expo-modules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": {
    "config": {
      "name": "expo-permissions",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": {
    "config": {
      "name": "expo-splash-screen",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": {
    "config": {
      "name": "expo-structured-headers",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": {
    "config": {
      "name": "expo-updates",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-updates",
    "version": "0.8.0",
  },
  "expo-updates-interface": {
    "config": {
      "name": "expo-updates-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-updates-interface",
    "version": "0.2.1",
  },
  "unimodules-app-loader": {
    "config": {
      "name": "unimodules-app-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": {
    "config": {
      "name": "unimodules-task-manager-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo search with-sentry 1`] = `
{
  "@unimodules/core": {
    "config": {
      "name": "unimodules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/core",
    "version": "7.1.1",
  },
  "@unimodules/react-native-adapter": {
    "config": {
      "android": {
        "packages": [],
      },
      "name": "unimodules-react-native-adapter",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/@unimodules/react-native-adapter",
    "version": "6.3.1",
  },
  "expo-application": {
    "config": {
      "name": "expo-application",
      "platforms": [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-application",
    "version": "3.2.0",
  },
  "expo-constants": {
    "config": {
      "name": "expo-constants",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-constants",
    "version": "11.0.1",
  },
  "expo-device": {
    "config": {
      "name": "expo-device",
      "platforms": [
        "ios",
        "android",
        "web",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-device",
    "version": "3.3.0",
  },
  "expo-error-recovery": {
    "config": {
      "name": "expo-error-recovery",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-error-recovery",
    "version": "2.2.0",
  },
  "expo-file-system": {
    "config": {
      "name": "expo-file-system",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-file-system",
    "version": "11.1.3",
  },
  "expo-font": {
    "config": {
      "name": "expo-font",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-font",
    "version": "9.2.1",
  },
  "expo-image-loader": {
    "config": {
      "name": "expo-image-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-image-loader",
    "version": "2.2.0",
  },
  "expo-keep-awake": {
    "config": {
      "name": "expo-keep-awake",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-keep-awake",
    "version": "9.2.0",
  },
  "expo-modules-core": {
    "config": {
      "name": "expo-modules-core",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-modules-core",
    "version": "0.2.0",
  },
  "expo-permissions": {
    "config": {
      "name": "expo-permissions",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-permissions",
    "version": "12.1.1",
  },
  "expo-splash-screen": {
    "config": {
      "name": "expo-splash-screen",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-splash-screen",
    "version": "0.11.2",
  },
  "expo-structured-headers": {
    "config": {
      "name": "expo-structured-headers",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/expo-structured-headers",
    "version": "1.1.1",
  },
  "expo-updates": {
    "config": {
      "name": "expo-updates",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [
      {
        "path": "monorepo/node_modules/expo-updates",
        "version": "0.8.0",
      },
    ],
    "path": "monorepo/apps/with-sentry/node_modules/expo-updates",
    "version": "0.8.2",
  },
  "expo-updates-interface": {
    "config": {
      "name": "expo-updates-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [
      {
        "path": "monorepo/node_modules/expo-updates-interface",
        "version": "0.2.1",
      },
    ],
    "path": "monorepo/apps/with-sentry/node_modules/expo-updates-interface",
    "version": "0.2.2",
  },
  "unimodules-app-loader": {
    "config": {
      "name": "unimodules-app-loader",
      "platforms": [
        "android",
        "ios",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-app-loader",
    "version": "2.2.0",
  },
  "unimodules-task-manager-interface": {
    "config": {
      "name": "unimodules-task-manager-interface",
      "platforms": [
        "ios",
        "android",
      ],
    },
    "duplicates": [],
    "path": "monorepo/node_modules/unimodules-task-manager-interface",
    "version": "6.2.0",
  },
}
`;

exports[`monorepo verify { app: 'ejected', platform: 'android' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'ejected', platform: 'apple' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'managed', platform: 'android' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'managed', platform: 'apple' } 1`] = `
"✅ Everything is fine!
"
`;

exports[`monorepo verify { app: 'with-sentry', platform: 'android' } 1`] = `
" - [35mnode_modules/expo-updates[39m ([36m0.8.2[39m)
 - [90m../../node_modules/expo-updates[39m ([90m0.8.0[39m)
 - [35mnode_modules/expo-updates-interface[39m ([36m0.2.2[39m)
 - [90m../../node_modules/expo-updates-interface[39m ([90m0.2.1[39m)
"
`;

exports[`monorepo verify { app: 'with-sentry', platform: 'apple' } 1`] = `
" - [35mnode_modules/expo-updates[39m ([36m0.8.2[39m)
 - [90m../../node_modules/expo-updates[39m ([90m0.8.0[39m)
 - [35mnode_modules/expo-updates-interface[39m ([36m0.2.2[39m)
 - [90m../../node_modules/expo-updates-interface[39m ([90m0.2.1[39m)
"
`;
